2007-01-22  Peter Korsgaard  <peter.korsgaard@barco.com>

	* src/load.c (do_load): Reset entry address before load so
	go/exec commands will fail after an incomplete upload.

2006-11-28  David Fernandez  <dfernandez@cct.co.uk>

	* cdl/redboot.cdl: Modified to change the option
	CYGDAT_REDBOOT_DEFAULT_NETWORK_DEVICE to make it independent of
	CYGSEM_REDBOOT_FLASH_CONFIG, changes in net_io.c will allow to
	specify a default interface in terms of the name and its position
	in the table of interfaces for the driver.

	* src/net/net_io.c: Modified to allow
	CYGDAT_REDBOOT_DEFAULT_NETWORK_DEVICE to be used even with no flash
	available.
	Bug regarding CYGSEM_REDBOOT_NETWORK_INIT_ONE_DEVICE fixed, so that
	when working with several network interfaces, and the default one
	fails to initialize, only the first successfully initialized one is
	used.

2006-11-19  Andrew Lunn  <lunn@laptop.lunn.ch>

	* src/load.c: Only call valid_address() if
	CYGSEM_REDBOOT_VALIDATE_USER_RAM_LOADS is enabled.

2006-09-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/redboot.cdl: Fix description of CYGSEM_REDBOOT_DISK_IDE.
	Error pointed out by Wang Cui

2006-08-28  Sergei Gavrikov  <w3sg@SoftHome.net>

	* src/net/tftp_client.c (tftp_error_ack): Fix compiler warnings.

2006-07-21  David Ho <davidkwho@gmail.com>

	* src/flash.c (fis_start_update_directory): Fix build error when
	redundant FIS selected and locking is not enabled/supported.

2006-05-24  Gary Thomas  <gary@mlbassoc.com>

	* src/net/net_io.c (do_ip_addr): Bail out if no networking.

2006-05-23  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_update_directory): Fix problems building on systems
	with no FLASH locking.

2006-04-19 Alexander Neundorf <alexander.neundorf@jenoptik.com>
	* src/flash.c, src/main.c, src/fconfig.c: 
        * include/fis.h, include/redboot.h:
        * cdl/redboot.cdl:
        add support for redundant FIS tables, configurable via 
	CYGOPT_REDBOOT_REDUNDANT_FIS
